--- a/src/main/resources/com/example/javafxdemo/hello-view.fxml
+++ b/src/main/resources/com/example/javafxdemo/hello-view.fxml
@@ -18,16 +18,16 @@
       <AnchorPane prefHeight="200.0" prefWidth="168.0" BorderPane.alignment="CENTER" />
    </left>
    <right>
-      <AnchorPane prefHeight="200.0" prefWidth="280.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label fx:id="UserNameLabel" layoutX="27.0" layoutY="19.0" text="Username" />
-            <Label fx:id="PasswordLabel" layoutX="27.0" layoutY="64.0" text="Password" />
-            <PasswordField fx:id="PasswordInput" layoutX="101.0" layoutY="56.0" promptText="Enter User ID" />
-            <TextField fx:id="UserNameInput" layoutX="101.0" layoutY="15.0" promptText="Enter email" />
-            <Button fx:id="LoginButton" layoutX="65.0" layoutY="98.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="151.0" text="Login" />
-            <Button fx:id="RegisterButton" layoutX="141.0" layoutY="156.0" mnemonicParsing="false" onAction="#onRegisterButtonClick" prefHeight="30.0" prefWidth="104.0" text="Register" />
-            <Label fx:id="RegisterLabel" layoutX="60.0" layoutY="162.0" text="No account?" />
-         </children>
-      </AnchorPane>
+       <AnchorPane prefHeight="200.0" prefWidth="280.0" BorderPane.alignment="CENTER">
+           <Label fx:id="UserNameLabel" layoutX="27.0" layoutY="19.0" text="Username"/>
+           <Label fx:id="PasswordLabel" layoutX="27.0" layoutY="64.0" text="Password"/>
+           <PasswordField fx:id="PasswordInput" layoutX="101.0" layoutY="56.0" promptText="Enter User ID"/>
+           <TextField fx:id="UserNameInput" layoutX="101.0" layoutY="15.0" promptText="Enter email"/>
+           <Button fx:id="LoginButton" layoutX="65.0" layoutY="98.0" mnemonicParsing="false" prefHeight="30.0"
+                   prefWidth="151.0" text="Login"/>
+           <Button fx:id="RegisterButton" layoutX="141.0" layoutY="156.0" mnemonicParsing="false"
+                   onAction="#onRegisterButtonClick" prefHeight="30.0" prefWidth="104.0" text="Register"/>
+           <Label fx:id="RegisterLabel" layoutX="60.0" layoutY="162.0" text="No account?"/>
+       </AnchorPane>
    </right>
 </BorderPane>
