--- a/src/main/resources/com/example/javafxdemo/search-view.fxml
+++ b/src/main/resources/com/example/javafxdemo/search-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxdemo.SearchController">
+<BorderPane  stylesheets="@LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxdemo.SearchController">
    <center>
       <AnchorPane BorderPane.alignment="CENTER">
          <BorderPane.margin>
