--- a/src/main/resources/com/javafxdemo/fxml/login-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/login-view.fxml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxdemo.LoginController">
+<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.LoginController">
     <right>
         <AnchorPane prefHeight="206.0" prefWidth="266.0" BorderPane.alignment="CENTER">
             <BorderPane.margin>
                 <Insets bottom="30.0" right="5.0" top="20.0" />
             </BorderPane.margin>
-            <Label fx:id="UserNameLabel" layoutX="27.0" layoutY="19.0" text="Username" />
-            <Label fx:id="PasswordLabel" layoutX="27.0" layoutY="64.0" text="Password" />
+            <Label layoutX="27.0" layoutY="19.0" text="Username" />
+            <Label layoutX="27.0" layoutY="64.0" text="Password" />
             <PasswordField fx:id="passwordInput" layoutX="101.0" layoutY="56.0" promptText="Enter User ID" />
             <TextField fx:id="usernameInput" layoutX="101.0" layoutY="15.0" promptText="Enter email" />
-            <Button fx:id="loginButton" layoutX="65.0" layoutY="98.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefWidth="151.0" text="Login" />
+            <Button fx:id="loginButton" layoutX="65.0" layoutY="98.0" mnemonicParsing="false" onAction="#validateLogin" prefWidth="151.0" text="Login" />
             <Button fx:id="RegisterButton" layoutX="153.0" layoutY="176.0" mnemonicParsing="false" onAction="#onRegisterButtonClick" text="Register" />
-            <Label fx:id="RegisterLabel" layoutX="64.0" layoutY="182.0" text="No account?" />
-            <Label fx:id="loginErrorLabel" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="27.0" layoutY="130.0" onDragDetected="#loginButtonOnAction" prefHeight="37.0" prefWidth="223.0" textAlignment="CENTER" textFill="#e80808" textOverrun="CENTER_ELLIPSIS" wrapText="true">
+            <Label layoutX="64.0" layoutY="182.0" text="No account?" />
+            <Label fx:id="loginErrorLabel" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="27.0" layoutY="130.0" onDragDetected="#loginButtonOnAction" prefHeight="37.0" prefWidth="223.0" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" wrapText="true">
                 <font>
                     <Font name="System Bold" size="13.0" />
                 </font>
@@ -51,7 +45,7 @@
            <BorderPane.margin>
                <Insets left="5.0" />
            </BorderPane.margin>
-           <Image url="@UserLoginIcon.jpg" />
+           <Image url="@../images/UserLoginIcon.jpg" />
        </ImageView>
    </left>
    <padding>
