--- a/src/main/resources/com/javafxdemo/fxml/registration-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/registration-view.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxdemo.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.LoginController">
     <VBox layoutX="14.0" layoutY="88.0" spacing="32.0">
         <TextField fx:id="FirstnameInput" prefHeight="25.0" prefWidth="162.0" promptText="Firstname" VBox.vgrow="NEVER" />
         <TextField fx:id="PhoneInput" prefHeight="25.0" prefWidth="162.0" promptText="Phone" text="+46 " />
@@ -25,21 +19,21 @@
         </SplitMenuButton>
         <TextField fx:id="EmailInput" prefHeight="25.0" prefWidth="162.0" promptText="Email" />
     </VBox>
-    <VBox layoutX="14.0" layoutY="71.0" spacing="40.0">
-        <Label fx:id="FirstnameLabel" text="Firstname" />
-        <Label fx:id="PhoneLabel" text="Phone" />
-        <Label fx:id="UserTypeLabel" text="User Type" />
-        <Label fx:id="EmailLabel" text="Email" />
-        <Label fx:id="NotesLabel" text="Notes" />
+    <VBox layoutX="14.0" layoutY="68.0" spacing="38.0">
+        <Label text="Firstname" />
+        <Label text="Phone" />
+        <Label text="User Type" />
+        <Label text="Email" />
+        <Label text="Notes" />
     </VBox>
-    <Label fx:id="RegLabel" layoutX="249.0" layoutY="8.0" text="Registration" textAlignment="CENTER">
+    <Label layoutX="249.0" layoutY="8.0" text="Registration" textAlignment="CENTER">
         <font>
             <Font name="System Bold" size="24.0" />
         </font>
     </Label>
-    <Label fx:id="ConfirmEmailLabel" layoutX="211.0" layoutY="242.0" text="Confirm Email" />
+    <Label layoutX="211.0" layoutY="238.0" text="Confirm Email" />
     <TextField fx:id="ConfirmEmailInput" layoutX="211.0" layoutY="259.0" prefHeight="25.0" prefWidth="162.0" promptText="Enter Email again" />
-    <Label fx:id="LastnameLabel" layoutX="206.0" layoutY="71.0" text="Lastname" />
+    <Label layoutX="206.0" layoutY="68.0" text="Lastname" />
     <TextField fx:id="LastnameInput" layoutX="206.0" layoutY="88.0" prefHeight="25.0" prefWidth="162.0" promptText="Lastname" />
     <TextArea fx:id="NotesInput" layoutX="14.0" layoutY="315.0" prefHeight="66.0" prefWidth="572.0" />
     <Button fx:id="RegisterButton" layoutX="405.0" layoutY="259.0" mnemonicParsing="false" text="REGISTER" />
