--- a/src/main/resources/com/javafxdemo/fxml/search-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/search-view.fxml
@@ -2,14 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-
-<BorderPane  stylesheets="@LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxdemo.SearchController">
+<?import javafx.scene.layout.*?>
+<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.SearchController">
    <center>
       <AnchorPane BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -18,21 +16,21 @@
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
-         <Button fx:id="searchForResultButton" alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutX="418.0" layoutY="52.0" onAction="#onSearchForResultButton" text="Go!" />
+         <Button fx:id="searchForResultButton" alignment="CENTER" contentDisplay="CENTER" layoutX="507.0" layoutY="44.0" onAction="#onSearchForResultButton" prefHeight="42.0" prefWidth="64.0" text="Go!" />
          <ImageView fitHeight="52.0" fitWidth="60.0" layoutX="39.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@LTUSearchIcon.jpg" />
+            <Image url="@../images/LTUSearchIcon.jpg" />
          </ImageView>
-         <TextField fx:id="searchTextInputField" layoutX="108.0" layoutY="52.0" prefHeight="26.0" prefWidth="296.0" promptText="Enter library search here..." style="-fx-font-style: white; -fx-cursor: white;" />
+         <TextField fx:id="searchTextInputField" layoutX="108.0" layoutY="52.0" prefHeight="26.0" prefWidth="389.0" promptText="Enter library search here..." />
       </AnchorPane>
    </center>
    <bottom>
-      <TextArea fx:id="searchResultsArea" prefHeight="187.0" prefWidth="500.0" promptText="Search results will show here" BorderPane.alignment="CENTER">
+      <Label fx:id="searchResultsArea" prefHeight="296.0" prefWidth="570.0" BorderPane.alignment="CENTER_LEFT">
          <padding>
             <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
          </padding>
          <BorderPane.margin>
             <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
          </BorderPane.margin>
-      </TextArea>
+      </Label>
    </bottom>
 </BorderPane>
