--- a/src/main/resources/com/javafxdemo/fxml/hello-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/hello-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane prefHeight="308.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.LoginController">
+<BorderPane prefHeight="308.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.StartpageController">
    <top>
       <VBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
           <padding>
@@ -25,7 +25,7 @@
            <TextField fx:id="UserNameInput" layoutX="101.0" layoutY="15.0" promptText="Enter email"/>
            <Button fx:id="LoginButton" layoutX="65.0" layoutY="98.0" mnemonicParsing="false" prefHeight="30.0"
                    prefWidth="151.0" text="Login"/>
-           <Button fx:id="RegisterButton" layoutX="141.0" layoutY="156.0" mnemonicParsing="false"
+           <Button fx:id="registerButton" layoutX="141.0" layoutY="156.0" mnemonicParsing="false"
                    onAction="#onRegisterButtonClick" prefHeight="30.0" prefWidth="104.0" text="Register"/>
            <Label fx:id="RegisterLabel" layoutX="60.0" layoutY="162.0" text="No account?"/>
        </AnchorPane>
