--- a/src/main/resources/com/javafxdemo/fxml/registration-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/registration-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.StartpageController">
     <VBox layoutX="14.0" layoutY="88.0" spacing="32.0">
         <TextField fx:id="FirstnameInput" prefHeight="25.0" prefWidth="162.0" promptText="Firstname" VBox.vgrow="NEVER" />
         <TextField fx:id="PhoneInput" prefHeight="25.0" prefWidth="162.0" promptText="Phone" text="+46 " />
@@ -36,5 +36,5 @@
     <Label layoutX="206.0" layoutY="68.0" text="Lastname" />
     <TextField fx:id="LastnameInput" layoutX="206.0" layoutY="88.0" prefHeight="25.0" prefWidth="162.0" promptText="Lastname" />
     <TextArea fx:id="NotesInput" layoutX="14.0" layoutY="315.0" prefHeight="66.0" prefWidth="572.0" />
-    <Button fx:id="RegisterButton" layoutX="405.0" layoutY="259.0" mnemonicParsing="false" text="REGISTER" />
+    <Button fx:id="registerButton" layoutX="405.0" layoutY="259.0" mnemonicParsing="false" text="REGISTER" />
 </AnchorPane>
