--- a/src/main/resources/com/javafxdemo/fxml/loan-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/loan-view.fxml
@@ -1,14 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.javafxdemo.controller.LoanController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.LoanController">
+   <bottom>
+      <ButtonBar buttonMinWidth="50.0" prefHeight="70.0" prefWidth="84.0" BorderPane.alignment="CENTER">
+         <buttons>
+            <ImageView fitHeight="94.0" fitWidth="153.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@../images/LTULogo.jpg" />
+            </ImageView>
+            <Button mnemonicParsing="false" prefHeight="42.0" text="Exit" visible="false" />
+            <Button fx:id="exitButton" mnemonicParsing="false" prefHeight="42.0" text="Exit" />
+            <Button fx:id="backButton" mnemonicParsing="false" prefHeight="42.0" text="Back" />
+         </buttons>
+         <BorderPane.margin>
+            <Insets bottom="15.0" right="15.0" top="15.0" />
+         </BorderPane.margin>
+      </ButtonBar>
+   </bottom>
+   <left>
+      <VBox prefHeight="213.0" prefWidth="177.0" spacing="4.0" BorderPane.alignment="CENTER">
+         <padding>
+            <Insets left="38.0" top="15.0" />
+         </padding>
+         <Button fx:id="searchButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Search" />
+         <Button fx:id="reservationButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Reservation" />
+         <Button fx:id="loanButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Loan" />
+         <Button fx:id="roomBookingButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Room Booking" />
+         <Button fx:id="paymentButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Payment" />
+         <Button fx:id="profileButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Profile" />
+         <Button fx:id="historyButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="History" />
+      </VBox>
+   </left>
+   <center>
+      <VBox prefHeight="258.0" prefWidth="450.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <Label maxHeight="-Infinity" prefHeight="14.0" style="-fx-padding: 0;" text="Loan items selected:">
+            <VBox.margin>
+               <Insets top="4.0" />
+            </VBox.margin></Label>
+         <Label fx:id="selectedLoanItemsLabel" prefHeight="120.0" style="-fx-padding:10;" text="(Selected Loan Items):" />
+         <HBox alignment="CENTER" prefHeight="21.0" prefWidth="403.0" spacing="8.0">
+            <Label fx:id="borrowingRulesLabel" text="I agree to the borrowing rules and conditions."/>
+         </HBox>
+         <StackPane prefHeight="50.0" prefWidth="403.0">
+            <Label fx:id="inactiveAccountLabel"
+                   text="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;&lt;?import javafx.scene.control.Label?&gt;&lt;Label fx:id=&quot;currentLoanStatusLabel&quot; style=&quot;-fx-padding:10;&quot; text=&quot;Your current Loan Status is inactive."/>
+            <Button fx:id="loanConfirmButton" minHeight="-Infinity" mnemonicParsing="false" prefHeight="42.0"
+                    prefWidth="127.0" text="Confirm"/>
+            <Label fx:id="borrowingRulesBrokenLabel" text="This breaches your loan conditions."/>
+         </StackPane>
+         <BorderPane.margin>
+            <Insets right="20.0" top="20.0" />
+         </BorderPane.margin>
+      </VBox>
+   </center>
+</BorderPane>
