--- a/src/main/resources/com/javafxdemo/fxml/startpageloggedin-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/startpageloggedin-view.fxml
@@ -2,46 +2,53 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.StartpageLoggedInController">
-    <right>
-        <AnchorPane prefHeight="206.0" prefWidth="266.0" BorderPane.alignment="CENTER">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.StartpageLoggedInController">
+    <bottom>
+        <ButtonBar buttonMinWidth="50.0" prefHeight="70.0" prefWidth="84.0" BorderPane.alignment="CENTER">
+            <buttons>
+                <ImageView fitHeight="94.0" fitWidth="153.0" pickOnBounds="true" preserveRatio="true">
+                    <Image url="@../images/LTULogo.jpg" />
+                </ImageView>
+                <Button mnemonicParsing="false" prefHeight="42.0" text="Exit" visible="false" />
+                <Button fx:id="exitButton" mnemonicParsing="false" prefHeight="42.0" text="Exit" />
+                <Button fx:id="backButton" mnemonicParsing="false" prefHeight="42.0" text="Back" />
+            </buttons>
             <BorderPane.margin>
-                <Insets bottom="30.0" right="5.0" top="20.0" />
+                <Insets bottom="15.0" right="15.0" top="15.0" />
             </BorderPane.margin>
-            <Button fx:id="startPageLoggedInLogOutButton" layoutX="153.0" layoutY="176.0" mnemonicParsing="false" onAction="#onStartPageLoggedInLogOutButton" text="Log out" />
-        </AnchorPane>
-    </right>
-    <top>
-        <HBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
-            <padding>
-                <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
-            </padding>
-         <Label fx:id="startPageLoggedInWelcomeLabel" prefHeight="17.0" prefWidth="234.0" />
-            <Button fx:id="startPageLoggedInSearchButton" mnemonicParsing="false" onAction="#onStartPageLoggedInSearchButtonClick" text="Search" />
-         <Button fx:id="startPageLoggedInActiveLoansButton" mnemonicParsing="false" onAction="#onStartPageLoggedInActiveLoansButton" text="Active Loans" />
-        </HBox>
-    </top>
+        </ButtonBar>
+    </bottom>
     <left>
-        <ImageView fitHeight="127.0" fitWidth="211.0" layoutX="20.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-            <effect>
-                <Shadow />
-            </effect>
-            <BorderPane.margin>
-                <Insets left="5.0" />
-            </BorderPane.margin>
-            <Image url="@../images/UserLoginIcon.jpg" />
-        </ImageView>
+        <VBox prefHeight="213.0" prefWidth="177.0" spacing="4.0" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets left="38.0" top="15.0" />
+            </padding>
+            <Button fx:id="searchButton" mnemonicParsing="false" onAction="#onSearchButtonClick" prefHeight="42.0" prefWidth="112.0" text="Search" />
+            <Button fx:id="reservationButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Reservation" />
+            <Button fx:id="loanButton" mnemonicParsing="false" onAction="#onLoanButtonClick" prefHeight="42.0" prefWidth="112.0" text="Loan" />
+            <Button fx:id="roomBookingButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Room Booking" />
+            <Button fx:id="paymentButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Payment" />
+            <Button fx:id="profileButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Profile" />
+            <Button fx:id="historyButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="History" />
+        </VBox>
     </left>
-    <padding>
-        <Insets left="5.0" right="5.0" />
-    </padding>
+    <center>
+        <VBox prefHeight="213.0" prefWidth="423.0" spacing="10.0" BorderPane.alignment="CENTER">
+            <Label fx:id="welcomeTextLabel" style="-fx-padding:10;" text="Welcome, ##. " />
+            <Label fx:id="currentLoanStatusLabel" style="-fx-padding:10;" text="Your current Loan Status is $$." />
+            <Label fx:id="itemsOverdueLabel" style="-fx-padding:10;" text="Items Overdue:" />
+            <Label fx:id="reservedItemsLabel" style="-fx-padding:10;" text="Reserved Items:" />
+            <Label fx:id="itemsOnLoanLabel" style="-fx-padding:10;" text="Items on Loan:" />
+            <BorderPane.margin>
+                <Insets right="20.0" top="20.0" />
+            </BorderPane.margin>
+        </VBox>
+    </center>
 </BorderPane>
