--- a/src/main/resources/com/javafxdemo/fxml/loan-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/loan-view.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -50,14 +49,12 @@
             </VBox.margin></Label>
          <Label fx:id="selectedLoanItemsLabel" prefHeight="120.0" style="-fx-padding:10;" text="(Selected Loan Items):" />
          <HBox alignment="CENTER" prefHeight="21.0" prefWidth="403.0" spacing="8.0">
-            <Label fx:id="borrowingRulesLabel" text="I agree to the borrowing rules and conditions."/>
+            <Label fx:id="borrowingRulesLabel" text="I agree to the borrowing rules and conditions." />
          </HBox>
          <StackPane prefHeight="50.0" prefWidth="403.0">
-            <Label fx:id="inactiveAccountLabel"
-                   text="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;&lt;?import javafx.scene.control.Label?&gt;&lt;Label fx:id=&quot;currentLoanStatusLabel&quot; style=&quot;-fx-padding:10;&quot; text=&quot;Your current Loan Status is inactive."/>
-            <Button fx:id="loanConfirmButton" minHeight="-Infinity" mnemonicParsing="false" prefHeight="42.0"
-                    prefWidth="127.0" text="Confirm"/>
-            <Label fx:id="borrowingRulesBrokenLabel" text="This breaches your loan conditions."/>
+            <Label fx:id="inactiveAccountLabel" text="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;&lt;?import javafx.scene.control.Label?&gt;&lt;Label fx:id=&quot;currentLoanStatusLabel&quot; style=&quot;-fx-padding:10;&quot; text=&quot;Your current Loan Status is inactive." />
+            <Button fx:id="loanConfirmButton" minHeight="-Infinity" mnemonicParsing="false" onAction="#onLoanConfirmButton" prefHeight="42.0" prefWidth="127.0" text="Confirm" />
+            <Label fx:id="borrowingRulesBrokenLabel" text="This breaches your loan conditions." />
          </StackPane>
          <BorderPane.margin>
             <Insets right="20.0" top="20.0" />
