--- a/src/main/resources/com/javafxdemo/fxml/loanReturn-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/loanReturn-view.fxml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="350.0" prefWidth="476.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.LoanReturnController">
+<BorderPane prefHeight="591.0" prefWidth="785.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.LoanReturnController">
    <top>
       <VBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
           <padding>
               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
           </padding>
          <Label fx:id="returnText" prefHeight="34.0" prefWidth="344.0" text="Please choose which item to return." />
-      
-          <Label fx:id="welcomeText" />
       </VBox>
    </top>
    <left>
-      <AnchorPane fx:id="anchorPane1" prefHeight="217.0" prefWidth="375.0" BorderPane.alignment="CENTER" />
+      <AnchorPane fx:id="anchorPane1" prefHeight="517.0" prefWidth="631.0" BorderPane.alignment="CENTER">
+         <children>
+            <DialogPane layoutY="75.0" prefHeight="53.0" prefWidth="560.0" />
+         </children></AnchorPane>
    </left>
    <right>
-       <AnchorPane fx:id="anchorPane2" prefHeight="252.0" prefWidth="144.0" BorderPane.alignment="CENTER">
+       <AnchorPane fx:id="anchorPane2" prefHeight="459.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
-            <ScrollBar fx:id="scrollBar" blockIncrement="0.0" layoutX="7.0" layoutY="14.0" max="50.0" orientation="VERTICAL" prefHeight="225.0" prefWidth="14.0" unitIncrement="10.0" />
+            <ScrollBar fx:id="scrollBar" blockIncrement="0.0" layoutX="7.0" layoutY="28.0" max="50.0" orientation="VERTICAL" prefHeight="371.0" prefWidth="14.0" unitIncrement="10.0" />
+            <Button fx:id="confirmButton" layoutX="49.0" layoutY="28.0" mnemonicParsing="false" onAction="#onConfirmButton" text="Confirm" />
          </children>
        </AnchorPane>
    </right>
