--- a/src/main/resources/com/javafxdemo/fxml/add-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/add-view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="685.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.CrudController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="685.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.AddController">
     <bottom>
         <ButtonBar buttonMinWidth="50.0" prefHeight="70.0" prefWidth="84.0" BorderPane.alignment="CENTER">
             <buttons>
@@ -39,18 +39,17 @@
     </left>
     <center>
         <VBox prefHeight="258.0" prefWidth="450.0" spacing="10.0" BorderPane.alignment="CENTER">
-         <AnchorPane prefHeight="412.0" prefWidth="557.0">
+         <AnchorPane prefHeight="473.0" prefWidth="693.0">
             <children>
                <TextField fx:id="idItemInput" layoutX="263.0" layoutY="37.0" />
                <TextField fx:id="inStockInput" layoutX="263.0" layoutY="74.0" />
                <TextField fx:id="titleInput" layoutX="263.0" layoutY="117.0" />
-               <Button fx:id="confirmCRUDButton" onAction="#onupdateItemClick" layoutX="268.0" layoutY="302.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="91.0" text="Confirm" />
 
                 <Label fx:id="idItemLable" alignment="CENTER" contentDisplay="CENTER" layoutX="202.0" layoutY="33.0" prefHeight="33.0" prefWidth="54.0" text="ItemID" textAlignment="CENTER">
                   <font>
                      <Font size="11.0" />
                   </font></Label>
-               <TextField fx:id="isbnInput" layoutX="264.0" layoutY="156.0" />
+               <TextField fx:id="isbnInput" layoutX="263.0" layoutY="156.0" />
                <TextField fx:id="totalInStockInput" layoutX="263.0" layoutY="198.0" />
                <TextField fx:id="publisherInput" layoutX="263.0" layoutY="241.0" prefHeight="17.0" prefWidth="161.0" />
                <Label fx:id="inStockLable" alignment="CENTER" contentDisplay="CENTER" layoutX="140.0" layoutY="74.0" prefHeight="33.0" prefWidth="116.0" text="Number in Stock" textAlignment="CENTER">
@@ -73,15 +72,28 @@
                      <Font size="11.0" />
                   </font>
                </Label>
-               <Label fx:id="publisherLable" alignment="CENTER" contentDisplay="CENTER" layoutX="202.0" layoutY="229.0" prefHeight="33.0" prefWidth="54.0" text="Publisher" textAlignment="CENTER">
+               <Label fx:id="publisherLable" alignment="CENTER" contentDisplay="CENTER" layoutX="190.0" layoutY="237.0" prefHeight="33.0" prefWidth="54.0" text="Publisher" textAlignment="CENTER">
                   <font>
                      <Font size="11.0" />
                   </font>
                </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutX="-16.0" layoutY="20.0" maxHeight="-Infinity" prefHeight="14.0" style="-fx-padding: 0;" text="Please insert the item values." />
+                  <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutX="14.0" layoutY="5.0" maxHeight="-Infinity" prefHeight="14.0" style="-fx-padding: 0;" text="Please insert the item values." />
+               <TextField fx:id="categoryInput" layoutX="263.0" layoutY="325.0" prefHeight="17.0" prefWidth="161.0" />
+               <TextField fx:id="authorInput" layoutX="263.0" layoutY="285.0" prefHeight="17.0" prefWidth="161.0" />
+               <Label fx:id="authorLable" alignment="CENTER" contentDisplay="CENTER" layoutX="190.0" layoutY="281.0" prefHeight="33.0" prefWidth="54.0" text="Author" textAlignment="CENTER">
+                  <font>
+                     <Font size="11.0" />
+                  </font>
+               </Label>
+               <Label fx:id="categoryLable" alignment="CENTER" contentDisplay="CENTER" layoutX="169.0" layoutY="321.0" prefHeight="33.0" prefWidth="87.0" text="Category" textAlignment="CENTER">
+                  <font>
+                     <Font size="11.0" />
+                  </font>
+               </Label>
+               <Button fx:id="confirmCRUDButton" layoutX="282.0" layoutY="379.0" mnemonicParsing="false" onAction="#onupdateItemClick" prefHeight="24.0" prefWidth="123.0" text="Confirm" />
             </children>
          </AnchorPane>
-            <HBox alignment="CENTER" prefHeight="214.0" prefWidth="753.0" spacing="8.0" />
+            <HBox alignment="CENTER" prefHeight="0.0" prefWidth="113.0" spacing="8.0" />
             <StackPane prefHeight="0.0" prefWidth="753.0" />
             <BorderPane.margin>
                 <Insets right="20.0" top="20.0" />
