--- a/src/main/resources/com/javafxdemo/fxml/loanReturn-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/loanReturn-view.fxml
@@ -29,6 +29,7 @@
          <children>
             <ScrollBar fx:id="scrollBar" blockIncrement="0.0" layoutX="7.0" layoutY="28.0" max="50.0" orientation="VERTICAL" prefHeight="371.0" prefWidth="14.0" unitIncrement="10.0" />
             <Button fx:id="confirmButton" layoutX="49.0" layoutY="28.0" mnemonicParsing="false" onAction="#onConfirmButton" text="Confirm" />
+            <Button fx:id="backButton" layoutX="59.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackButtonClick" text="Back" />
          </children>
        </AnchorPane>
    </right>
